force-app/main/default/objects/Vehicle_Allocation_Schedule__c/Vehicle_Allocation_Schedule__c.object-meta.xml
<CustomObject>
    <description>用于接送机的信息表配置</description>
    <label>Vehicle Allocation Schedule</label>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicle Allocation Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>