force-app/main/default/objects/Vehicle_Allocation_Schedule__c/fields/Assigned_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>指定的车辆</description>
    <label>Assigned Vehicle</label>
    <referenceTo>Expo_Vehicle_Info__c</referenceTo>
    <relationshipLabel>Vehicle Allocation Schedules</relationshipLabel>
    <relationshipName>Vehicle_Allocation_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>