force-app/main/default/objects/Vehicle_Allocation_Schedule__c/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <description>用于计数分组</description>
    <label>Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>