force-app/main/default/objects/Vehicle_Allocation_Schedule__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>每个组的出发日期</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>