force-app/main/default/objects/Vehicle_Allocation_Schedule__c/fields/Departure_Time__c.field-meta.xml
<CustomField>
    <fullName>Departure_Time__c</fullName>
    <description>每个组的出发时间点</description>
    <label>Departure Time</label>
    <type>Time</type>
</CustomField>