force-app/main/default/objects/Vehicle_Allocation_Schedule__c/fields/Enabled_State__c.field-meta.xml
<CustomField>
    <fullName>Enabled_State__c</fullName>
    <defaultValue>false</defaultValue>
    <description>状态，用于逻辑删除</description>
    <label>Enabled State</label>
    <type>Checkbox</type>
</CustomField>