force-app/main/default/objects/Vehicle_Allocation_Schedule__c/fields/Exhibition_Management__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>展会ID</description>
    <label>Exhibition Management</label>
    <referenceTo>ExpoInfo__c</referenceTo>
    <relationshipLabel>Vehicle Allocation Schedules</relationshipLabel>
    <relationshipName>Vehicle_Allocation_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>