force-app/main/default/objects/Vehicle_Allocation_Schedule__c/fields/Use_Time__c.field-meta.xml
<CustomField>
    <fullName>Use_Time__c</fullName>
    <description>返回给前端用，用来错峰使用车辆</description>
    <label>Use Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>