force-app/main/default/objects/Vehicle_Allocation_Schedule__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <description>用车类型</description>
    <label>Vehicle Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>